src/test/ui/impl-header-lifetime-elision/dyn-trait.nll.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/dyn-trait.rs:20:5
   |
LL | fn with_dyn_debug_static<'a>(x: Box<dyn Debug + 'a>) {
   |                              - `x` is a reference that is only valid in the function body
LL |     static_val(x);
   |     ^^^^^^^^^^^^^ `x` escapes the function body here

error: aborting due to previous error

